# TradeBot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  README_CN.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
config/: settings.yaml  settings_sim.yaml  trader.yaml
docs/: demo.md  source-risk-matrix.md
frontend/: README.md  index.html  openapi.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: _sim_metrics.py  analyze_sim.py  analyze_taker_flow_lag.py  benchmark_view_phase1.py  check_external_sources.py  debug_agent_call.py  diff_sim.py  fetch_session_ohlcv.py  ground_cycle_context_render.py  grounding_gmd_in_progress_ts.py  grounding_order_flow_tools.py  iter2b_sample_okx_algo_orders.py  iter2b_smoke_test.py  iter2b_write_path_probe.py  iter6_diag_ticker.py  iter6_task0_capture.py  observation_token_audit.py  probe_taker_flow_lag.py  smoke_sim_microstructure.py  tool_call_summary.py  verify_ohlcv_semantics.py  verify_ohlcv_semantics_v2.py  verify_taker_flow_boundary.py
src/: __main__.py  config.py
tests/: _fixtures.py  _sim_fixtures.py  conftest.py  test_5field_anchor_drift_guard.py  test_agent_cycle_injection.py  test_alembic_migration.py  test_alembic_net_pnl_metrics.py  test_alembic_p4.py  test_alembic_react_timeline.py  test_alembic_rebuild_v_alert_lifecycle.py  test_alembic_roundtrip_phase1.py  test_alert_age.py  test_alert_family.py  test_alert_lifecycle.py  test_analyze_sim.py  test_app_lifecycle_n3.py  test_approval.py  test_args_format.py  test_av_time_of_day_cache.py  test_cache.py  (+136 more)
(+309 files in other folders)
