[project]
name = "tradebot"
version = "0.1.0"
description = "AI Agent-driven crypto trading bot"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=1.78,<2",
    "pydantic>=2.0",
    "ccxt>=4.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pandas>=2.0",
    "pandas-ta>=0.3",
    "rich>=13.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
